"Voice output enabled"

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,5 @@
     <string name="result_will_be_displayed_here">Result will be displayed here</string>
     <string name="dot">.</string>
     <string name="back"><![CDATA[<<]]></string>
+    <string name="math">MATH</string>
 </resources>
