--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,8 @@
     <string name="dot">.</string>
     <string name="back"><![CDATA[<<]]></string>
     <string name="math">MATH</string>
+    <string name="scientific">Scientific</string>
+    <string name="open">(</string>
+    <string name="close">)</string>
+
 </resources>
